# MwEnet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MwEnet.cbp  MwEnet.sln  MwEnet.vcxproj  MwEnet.vcxproj.filters  README.md  ReadMe.txt  updateSdkFolder.bat  updateSdkFolderLinux
Enet/: CMakeLists.txt  README.txt
enet-1.3.9/enet/: test
mw/enet/: client.cpp  client.h  enetnetwork.cpp  enetnetwork.h  server.cpp  server.h
src/mw/: client.cpp  client.h  enetclient.cpp  enetclient.h  enetnetwork.cpp  enetnetwork.h  enetserver.cpp  enetserver.h  localnetwork.cpp  localnetwork.h  network.h  packet.h  server.cpp  server.h
